iphone upscale test

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #181c25; /* Fallback color */
-  background-image: url("https://img.freepik.com/free-vector/gradient-dark-dynamic-lines-background_23-2148995950.jpg");
+  background-image: url("https://i.ibb.co/9Nn0CVT/gradient-dark-dynamic-lines-background-23-2148995950-1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
